app/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/part-of: petclinic-app
  name: petclinic
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: petclinic
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: petclinic
        deploymentconfig: petclinic
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/springboot/petclinic:latest
        imagePullPolicy: Always
        name: petclinic
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
